# leaf-shader-transpiler

./: CMakeLists.txt  CMakePresets.txt  README.md
example/: CMakeLists.txt  main.cpp
include/leaf/: shader.hpp  shader_layout.hpp  shader_transpiler.hpp
